--- a/01_agama/dirgha/DA_18.md
+++ b/01_agama/dirgha/DA_18.md
@@ -4,7 +4,7 @@ title: The Long Discourses | 18. Personal Gladness
 type: kramdown
 base: ../../
 previous: DA_17.html
-next: DA_20.html
+next: DA_19.html
 ---
 
 # [The Long Discourses](index.html)
@@ -66,7 +66,7 @@ He replied, “I don’t know them.”
 14\. “The Dharma that the Tathāgata teaches has another superiority, which is cessation. Cessation refers to this: The painful cessation that’s gradually attained and inferior in both ways, painful cessation that’s quickly attained and only inferior in that it’s painful, pleasant cessation that’s gradually attained and only inferior in that it’s gradual, pleasant cessation that’s quickly attained but doesn’t extend far and called inferior because of that. When the present Tathāgata quickly attained the pleasant cessation, it did extend far. Even the gods and humans saw his miracles.”
 {:#p14}
 
-15\. Śāriputra told the Buddha, “The Bhagavān’s teaching is sublime and supreme. Down to the women, people can retain it, end the contaminants, and become uncontaminated. Their minds are liberated, and their wisdom is liberated. In the present life, they realize for themselves: ‘Birth and death has been ended, the religious life has been established, and the task has been accomplished. I won’t be subject to later existence.’
+15\. Śāriputra told the Buddha, “The Bhagavān’s teaching is sublime and supreme. Down to the women, people can retain it, end the contaminants, and become uncontaminated. Their minds are liberated, and their wisdom is liberated. In the present life, they realize for themselves: ‘Birth and death have been ended, the religious life has been established, and the task has been accomplished. I won’t be subject to later existence.’
 “This is the Tathāgata’s teaching of the unsurpassed cessation. This Dharma is unsurpassed, his wisdom is complete, and his miraculous ability is complete. None of the world’s ascetics and priests can match the Tathāgata. How could they surpass him?
 {:#p15}
 
@@ -117,7 +117,7 @@ He replied, “I don’t know them.”
 
 “This Dharma is unsurpassed, his wisdom is complete, and his miraculous ability is complete. None of the world’s ascetics and priests can match the Tathāgata. How could they surpass him?
 
-29\. “The Dharma that the Tathāgata teaches has another superiority, which is his instruction. Instruction refers to this: Sometimes there’s a person who doesn’t go contrary to his instructions. They end the contaminants and become uncontaminated. Their mind is liberated, and their wisdom is liberated. In the present life, they realize for themselves: ‘Birth and death has been ended, the religious life has been established, and the task has been accomplished. I won’t be subject to another existence.’ This is the first instruction.
+29\. “The Dharma that the Tathāgata teaches has another superiority, which is his instruction. Instruction refers to this: Sometimes there’s a person who doesn’t go contrary to his instructions. They end the contaminants and become uncontaminated. Their mind is liberated, and their wisdom is liberated. In the present life, they realize for themselves: ‘Birth and death have been ended, the religious life has been established, and the task has been accomplished. I won’t be subject to another existence.’ This is the first instruction.
 {:#p29}
 
 30\. “Sometimes, a person doesn’t go contrary to his instructions. They end the five lower bonds. They don’t return to this world when they attain <em>nirvāṇa</em>.  This is the second instruction.
@@ -212,7 +212,7 @@ He replied, “I don’t know them.”
 
 ### Notes
 
-1. {:#n1}This is <em>sūtra</em> no. 18 of the <cite>Dīrgha Āgama</cite> (<a href="https://cbetaonline.dila.edu.tw/zh/T01n0001_p0076b23" target="_blank">T1.1.76b23-9a29</a>). The direct parallels for this <em>sūtra</em> are <a href="https://suttacentral.net/dn28" target="_blank">DN 28</a>, <a href="https://suttacentral.net/sn47.12" target="_blank">SN 47.12</a>, <a href="https://suttacentral.net/sa498" target="_blank">SĀ 3.35</a> (<a href="https://cbetaonline.dila.edu.tw/zh/T02n0099_p0130c07" target="_blank">T99.498</a>), and <a href="https://cbetaonline.dila.edu.tw/zh/T0018_0001" target="_blank">T18</a>. [\[back\]](#ref1)
+1. {:#n1}This is <em>sūtra</em> no. 18 of the <cite>Dīrgha Āgama</cite> (<a href="https://cbetaonline.dila.edu.tw/zh/T01n0001_p0076b23" target="_blank">T1.1.76b23-9a29</a>). The direct parallels for this <em>sūtra</em> are <a href="https://suttacentral.net/dn28" target="_blank">DN 28</a>, <a href="https://suttacentral.net/sn47.12" target="_blank">SN 47.12</a>, <a href="https://suttacentral.net/sa498" target="_blank">SĀ 28.79 (498)</a> (<a href="https://cbetaonline.dila.edu.tw/zh/T02n0099_p0130c07" target="_blank">T99.498</a>), and <a href="https://cbetaonline.dila.edu.tw/zh/T0018_0001" target="_blank">T18</a>. [\[back\]](#ref1)
 2. {:#n2}*such liberation, and such halls of liberation.* C.如是解脫、如是解脫堂. The Pali parallel reads: *evaṁvihārī … evaṁvimuttā*. The Chinese translator consistently renders S. *vihāra* literally as 堂 (“meeting hall” or “temple”) throughout DĀ, despite it’s apparent figurative meaning in passages like this one. [\[back\]](#ref2)
 3. {:#n3}*<em>nirvāṇa</em>.* C. 滅度. In his essay “Nirvāṇa Has No Name,” Sengzhao, a student of Kumārajīva, explained that this Chinese translation captures two readings of <em>nirvāṇa</em> as the final cessation (滅) of suffering and the crossing over (度) of the four floods (cf. T 1858.157c2). As such, it’s difficult to translate to English as a single concept, so I’ve reverted to the Sanskrit. [\[back\]](#ref3)
 4. {:#n4}*believe the practice of right view.* C. 見正信行. I suspect the word order of this phrase is corrupt, that perhaps it should read 信正見行. The Pali parallel reads *sammādiṭṭhikā sammādiṭṭhikammasamādānā*, which means “holding right views and acting out right views.” [\[back\]](#ref4)
