--- a/01_agama/ekottarika/10/EA_10_01.md
+++ b/01_agama/ekottarika/10/EA_10_01.md
@@ -31,7 +31,7 @@ next: EA_10_02.html
   </tr>
   <tr>
     <td class='ch' title='T125.2.563c23'>「比丘，於彼無放逸行，閑靜一處，恒自覺知，而自遊戲。 欲漏心便得解脫，有漏心、無明漏心便得解脫。 已得解脫，便得解脫智： 『生死已盡，梵行已立，所作已辦。 更不復受有，如實知之。』」</td>
-    <td id='p5'>5. While practicing that carefulness, a monk secludes himself in a quiet place, and he’s constantly aware of himself and explores himself. He’s freed from thoughts contaminated by desire and freed from thoughts contaminated by existence and ignorance. Once he’s freed from them, he attains knowledge of that liberation: ‘Birth and death has been ended, the religious life has been established, and the task has been accomplished. I truly know that I won’t be subject to another existence.’”</td>
+    <td id='p5'>5. While practicing that carefulness, a monk secludes himself in a quiet place, and he’s constantly aware of himself and explores himself. He’s freed from thoughts contaminated by desire and freed from thoughts contaminated by existence and ignorance. Once he’s freed from them, he attains knowledge of that liberation: ‘Birth and death have been ended, the religious life has been established, and the task has been accomplished. I truly know that I won’t be subject to another existence.’”</td>
   </tr>
   <tr>
     <td class='ch' title='T125.2.563c27'>爾時，世尊便説斯偈：</td>
