--- a/01_agama/ekottarika/15/EA_15_04.md
+++ b/01_agama/ekottarika/15/EA_15_04.md
@@ -23,7 +23,7 @@ next: EA_15_05.html
   </tr>
   <tr>
     <td class='ch' title='T125.2.577b23'>「是故，諸比丘，當學法業不學財業。 如是，諸比丘，當作是學。」</td>
-    <td id='p3'>3. Therefore, monks, you should always train in Dharma work and not in material work. Thus, monks, you should train yourselves.”</td>
+    <td id='p3'>3. “Therefore, monks, you should always train in Dharma work and not in material work. Thus, monks, you should train yourselves.”</td>
   </tr>
   <tr>
     <td class='ch' title='T125.2.577b24'>爾時，諸比丘聞佛所説歡喜，奉行。</td>
