--- a/01_agama/ekottarika/16/EA_16_01.md
+++ b/01_agama/ekottarika/16/EA_16_01.md
@@ -19,7 +19,7 @@ next: EA_16_02.html
   </tr>
   <tr>
     <td class='ch' title='t125.2.578a14'>爾時，尊者難陀在舍衛城象華園中。 是時，尊者難陀在閑靜處，便生是念： 「如來出世甚為難遇。 億劫乃出，實不可見。 如來久遠長夜時乃出耳。 猶如優曇鉢花時乃出現，此亦如是。 如來出世甚為難遇。 億劫乃出，實不可見。 此處亦難遇： 一切諸行悉休息止，愛盡無餘，亦無染污，滅盡泥洹。」</td>
-    <td id='p2'>2. At the time, Venerable Nanda was staying in Nāgapuṣpa Park<sup id="ref2"><a href="#n2">2</a></sup> near the city of Śrāvastī. While residing in a secluded place, Venerable Nanda had this thought: “It’s so difficult to meet a Tathāgata when he appears in the world. It takes a million eons for him to appear, during which time he truly cannot be seen. It’s just a very long night until he appears. It’s like the time it takes for the <em>udumbara</em> flower to appear. It’s so difficult to meet a Tathāgata when he appears in the world. It takes a million eons for him to appear, during which time he truly cannot be seen. And there are other things that are hard to encounter: All actions coming to a stop, the end of craving without remainder, the lack of defilement, and the complete cessation of <em>nirvāṇa</em>.</td>
+    <td id='p2'>2. At the time, Venerable Nanda was staying in Nāgapuṣpa Park<sup id="ref2"><a href="#n2">2</a></sup> near the city of Śrāvastī. While residing in a secluded place, Venerable Nanda had this thought: “It’s so difficult to meet a Tathāgata when he appears in the world. It takes a million eons for him to appear, during which time he truly cannot be seen. It’s just a very long night until he appears. It’s like the time it takes for the <em>udumbara</em> flower to appear. It’s so difficult to meet a Tathāgata when he appears in the world. It takes a million eons for him to appear, during which time he truly cannot be seen. And there are other things that are hard to encounter: All actions coming to a stop, the end of craving without remainder, the lack of defilement, and the complete cessation of <em>nirvāṇa</em>.”</td>
   </tr>
   <tr>
     <td class='ch' title='t125.2.578a20'>爾時，有一魔行天子，知尊者難陀心中所念，便往至孫陀利釋種女所。 飛在虛空，以頌而嗟歎曰：</td>
@@ -148,7 +148,7 @@ next: EA_16_02.html
     Now, I’ve crossed over the flood of desire,<br/>
     Without defilement and stained by nothing.<br/>
     Honors and status are suffering, too;<br/>
-    The only real happiness is in Dharma.<br/>
+    The only real happiness is in the Dharma.<br/>
     Now, I don’t have any more of these bonds,<br/>
     Lust, hatred, and delusion are all gone.<br/>
     Those people who don’t train in this Dharma<br/>
