--- a/01_agama/other/T112.md
+++ b/01_agama/other/T112.md
@@ -14,7 +14,7 @@ next: ../samyukta/index.html
 1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
 {:#p1}
 
-2\. The Buddha addressed the disciples, “Listen! I will explain the wrong path, and then I’ll explain the right path. What is the wrong path? It’s untrue view, untrue thought, untrue speech, untrue control, untrue pursuit, untrue action, untrue mindfulness, and untrue concentration.[\[2\]](#n2){:#ref2} These are the eight wrong practices of the path.
+2\. The Buddha addressed the disciples, “Listen! I will explain the wrong path, and then I’ll explain the right path. What is the wrong path? It’s untrue view, untrue thought, untrue speech, untrue control, untrue pursuit, untrue action, untrue mindfulness, and untrue <em>samādhi</em>.[\[2\]](#n2){:#ref2} These are the eight wrong practices of the path.
 {:#p2}
 
 3\. “What are the eight right practices of the path? First is true view. What is true view? Believing in generosity, believing in veneration, believing in sacrifice, believing in the natural merits of good and bad acts, believing in father and mother, believing in the noble people of the world, believing in pursuing enlightenment, believing in true practice, and believing in true acquisition. In the present world or a later world, there’s realization of sagacity through one’s own accomplishment. These are the attributes of what I say is true view.
@@ -38,15 +38,15 @@ next: ../samyukta/index.html
 9\. “Seventh is true mindfulness. What is that? It’s the practice of birth and death combined with mindful attention, oriented towards mindful attention, and not forgetting or having incompatible mindfulness or pursuits. This is called true mindfulness.
 {:#p9}
 
-10\. “Eighth is true concentration. What is that? It’s the mindfulness of birth and death combined with the stopping of thoughts, stopping of appearances, stopping of guarding oneself, and stopping of the accumulation. One cannot become, doesn’t do anything blameworthy, and doesn’t fall from the middle way.
+10\. “Eighth is true <em>samādhi</em>. What is that? It’s the mindfulness of birth and death combined with the stopping of thoughts, stopping of appearances, stopping of guarding oneself, and stopping of the accumulation. One cannot become, doesn’t do anything blameworthy, and doesn’t fall from the middle way.
 {:#p10}
 
-This is called true concentration.
+This is called true <em>samādhi</em>.
 
 11\. “Monks, a disciple on the path will accept this true path of eight kinds of practice. Practicing it as it has been explained, they can attain the path’s eight practices and enlightenment.
 {:#p11}
 
-12\. “Someone of true view believes that generosity obtains merits in later worlds. They believe veneration when meeting an ascetic noble person makes the merits of veneration. They believe in sacrifices like hanging cloth, burning incense, scattering flowers, and lighting lamps. They believe in the natural merits of practicing the ten good [acts]. They believe in filial piety towards father and mother. They believe in the world’s noble people and delight in accepting the sutras. They believe in pursuing enlightenment by practicing the path. They believe true practice ends bad thinking. They believe true acquisition by not violating the precepts. In the present world or a later world, they attain their own sagacity, can instruct people to attain its realization, become accomplished people themselves, and can to bring others to accomplishment. This explanation of the attributes I stated is called knowing true view.
+12\. “Someone of true view believes that generosity obtains merits in later worlds. They believe veneration when meeting an ascetic noble person makes the merits of veneration. They believe in sacrifices like hanging cloth, burning incense, scattering flowers, and lighting lamps. They believe in the natural merits of practicing the ten good [acts]. They believe in filial piety towards father and mother. They believe in the world’s noble people and delight in accepting the sutras. They believe in pursuing enlightenment by practicing the path. They believe true practice ends bad thinking. They believe true acquisition by not violating the precepts. In the present world or a later world, they attain their own sagacity, can instruct people to attain its realization, become accomplished people themselves, and cause others to accomplish it. This explanation of the attributes I stated is called knowing true view.
 {:#p12}
 
 Thus, then, is the liberation of self and others.
