--- a/01_agama/samyukta2/SA2_46.md
+++ b/01_agama/samyukta2/SA2_46.md
@@ -31,7 +31,7 @@ next: SA2_180.html
 7\. “Suppose there are people in the world who are always pious to their parents, make offerings to ascetics and priests … and many who keep the precepts. Then the four god kings report it to Lord Śakra, and the gods rejoice greatly. They all say, ‘In the world, people cultivate the good practices and are virtuous. They do what should be done. The gods will increase, and the asuras will diminish!’
 {:#p7}
 
-8\. Lord Śakra rejoices and then speaks in verse:
+8\. “Lord Śakra rejoices and then speaks in verse:
 {:#p8}
 
 * {:.verse}“‘On the eighth and fourteenth days of the month\\
