--- a/01_agama/other/T109.md
+++ b/01_agama/other/T109.md
@@ -32,13 +32,13 @@ next: T110.html
 7\. “What is suffering? It refers to the suffering of birth and old age, the suffering of illness, the suffering of grief, sorrow, and trouble, the suffering of association with what’s disliked, the suffering of separation from what’s loved, and the suffering of not getting what’s sought. Essentially, it’s the suffering from the five aggregates that are acquired and proliferate.
 {:#p7}
 
-8\. “What is the formation of suffering? It refers to repeated existence and a disposition towards pleasure that comes from craving. Not parting from indulgence, craving desires, craving for form, and craving non-form wherever it may be is the formation of suffering.
+8\. “What is the formation of suffering? It refers to repeated existence and a disposition towards pleasure that comes from craving. Not parting from indulgence, craving desires, craving form, and craving non-form wherever it may be is the formation of suffering.
 {:#p8}
 
 9\. “What is the end of suffering? It refers to realizing that repeated existence and its pleasures come from craving. Lustful thoughts aren’t accepted. Not thinking of them, there’s no lust without remainder. Abandoning it, there’s no more meditation. The end of [suffering’s] formation is thus.
 {:#p9}
 
-10\. “What is the path that wants the end of suffering’s formation? It refers to accepting the practice of the correct eightfold path, which is right view, right intention, right speech, right livelihood, right control, right mindfulness, and right <em>samādhi</em>. This is the truth of accepting the path to the end of suffering’s formation.
+10\. “What is the path that wants the end of suffering’s formation? It refers to accepting the practice of the correct eightfold path, which is right view, right intention, right speech, right action, right livelihood, right control, right mindfulness, and right <em>samādhi</em>. This is the truth of accepting the path to the end of suffering’s formation.
 {:#p10}
 
 11\. “Furthermore, monks, these are the truth of suffering, the truth of what causes suffering’s formation, the truth of ending suffering’s formation, and the truth of accepting the path to the end of suffering’s formation.
@@ -47,10 +47,10 @@ next: T110.html
 12\. “If someone had yet to hear this teaching sometime in the past, they should accept it with vision and meditation, accept it by wise observation, and realize it by thinking about it, which will cause their mind to attain liberation. If someone present here has yet to hear this teaching of the four truths, they should accept it with vision, accept it with meditation, and accept it with wisdom and realization, which will cause their mind to attain liberation. If someone is somewhere else and doesn’t hear this teaching of the four truths, they also should accept it with vision, accept it with meditation, accept it with wisdom, and accept it with realization, which will cause their mind to attain liberation. These are the four truths in three turnings that total twelve steps. When I knew it before I was purified, I didn’t share it.
 {:#p12}
 
-13\. “Among all the world’s population of gods and humans, whether they are Brahmā, Māra, ascetics, or priests, I knew and realized it myself by practicing precepts, concentration, wisdom, and understanding. I knew and saw that liberation was accomplished, which was these four accomplishments. After this birth, I won’t have another existence. Long free of the world, I have no more grief or danger.”
+13\. “Among all the world’s population of gods and humans, whether they are Brahmā, Māra, ascetics, or priests, I knew and realized it myself by practicing precepts, <em>samādhi</em>, wisdom, and understanding. I knew and saw that liberation was accomplished, which was these four accomplishments. After this birth, I won’t have another existence. Long free of the world, I have no more grief or danger.”
 {:#p13}
 
-14\. When the Buddha said this, Venerable Ajñāta Kauṇḍinya and 8,000 nayutas of gods became dustless and spotless, and the Dharma eye arose in them. Those 1,000 monks ended the contaminants, their minds were liberated, they became <em>arhat</em>s, and the above formations that should be ended were all turned. “The Bhagavān’s Dharma wheel,” went the call, “has been turned three times.” None of the Dharma grounds of heavenly worlds didn’t fully hear it. It went first to the Four God Kings, the Trāyastriṃśa Heaven, the Yama Heaven, the Tuṣita Heaven, the Nirmāṇarati Heaven, and the Paranirmitavaśavartin Heaven. It reached the Brahma world in an instant and was heard everywhere there.
+14\. When the Buddha said this, Venerable Ajñāta Kauṇḍinya and 8,000 nayutas of gods became dustless and spotless, and the Dharma eye arose in them. Those 1,000 monks ended the contaminants, their minds were liberated, they became <em>arhat</em>s, and the above formations that should be ended were all turned. “The Bhagavān’s Dharma wheel,” they called out, “has been turned three times.” None of the Dharma grounds of heavenly worlds didn’t fully hear it. It went first to the Four God Kings, the Trāyastriṃśa Heaven, the Yama Heaven, the Tuṣita Heaven, the Nirmāṇarati Heaven, and the Paranirmitavaśavartin Heaven. It reached the Brahma world in an instant and was heard everywhere there.
 {:#p14}
 
 15\. There was then an earthquake throughout this Buddha world’s 3,000 suns and moons and 12,000 heavens and [3,000] earths. This was the Buddha Bhagavān’s first turning of the unsurpassed Dharma wheel that had yet to be turned at Bārāṇasī, and it illuminated the path for countless liberated gods and humans.
