--- a/01_agama/other/T110.md
+++ b/01_agama/other/T110.md
@@ -41,10 +41,10 @@ next: T112.html
 10\. “You, monks! This noble truth of the path leading to suffering’s cessation is a teaching to comprehend. Thus, it has been cultivated. Reasoned attention to what’s heard in this teaching gives rise to vision, knowledge, insight, and awakening.
 {:#p10}
 
-11\. “You, monks! If I had yet to comprehend the teaching of these four noble truths in three turnings and 12 aspects, then vision, knowledge, insight, and awakening couldn’t have arisen in me. I wouldn’t have rid myself of the afflicted mind and attained liberation while I was among gods, Māra, Brahmā, and all the world’s ascetics and priests. I couldn’t have realized the unsurpassed enlightenment.
+11\. “You, monks! If I had yet to comprehend the teaching of these four noble truths in three turnings and twelve aspects, then vision, knowledge, insight, and awakening couldn’t have arisen in me. I wouldn’t have rid myself of the afflicted mind and attained liberation while I was among gods, Māra, Brahmā, and all the world’s ascetics and priests. I couldn’t have realized the unsurpassed enlightenment.
 {:#p11}
 
-12\. “You, monks! It was because I understood this teaching of these four truths in three turnings and 12 aspects that vision, knowledge, insight, and awakening all could arise in me. I then rid myself of the afflicted mind and attained liberation while I was among the gods, Māra, Brahmā, and all the world’s ascetics and priests. It was then that I could realize the unsurpassed enlightenment.”
+12\. “You, monks! It was because I understood this teaching of these four truths in three turnings and twelve aspects that vision, knowledge, insight, and awakening all could arise in me. I then rid myself of the afflicted mind and attained liberation while I was among the gods, Māra, Brahmā, and all the world’s ascetics and priests. It was then that I could realize the unsurpassed enlightenment.”
 {:#p12}
 
 13\. When the Bhagavān explained this teaching, the elder Kauṇḍinya and 80,000 gods became dustless and spotless and attained purification of the Dharma eye. The Buddha addressed Kauṇḍinya, “Did you understand this teaching?”
@@ -60,7 +60,7 @@ He replied, “I understood it, Sugata.”
 15\. It was because Kauṇḍinya understood that teaching that he was thenceforth called Ajñāta Kauṇḍinya (Ajñāta meaning “Understood”).
 {:#p15}
 
-16\. Just then, the earth-dwelling yakṣas who heard the Buddha’s discourse raised a great cry, addressing humans and gods, “Gentlemen, you should know, the Buddha is staying at Ṛṣipatana in the Deer Preserve of Bārāṇasī, and he has explained in detail the three turnings and 12 aspects of the Dharma wheel. Because of this, he is able for gods, humans, Māra, Brahmā, ascetics, priests, and the whole world to make a great benefit, leading them to be equal to the religious life and swiftly reach the place of well-being and <em>nirvāṇa</em>. The gods will flourish and the asuras will diminish!”
+16\. Just then, the earth-dwelling yakṣas who heard the Buddha’s discourse raised a great cry, addressing humans and gods, “Gentlemen, you should know, the Buddha is staying at Ṛṣipatana in the Deer Preserve of Bārāṇasī, and he has explained in detail the three turnings and twelve aspects of the Dharma wheel. Because of this, he is able for gods, humans, Māra, Brahmā, ascetics, priests, and the whole world to make a great benefit, leading them to be equal to the religious life and swiftly reach the place of well-being and <em>nirvāṇa</em>. The gods will flourish and the asuras will diminish!”
 {:#p16}
 
 17\. From that address made by the yakṣas, the sky gods in the host of the four god kings all heard and understood it. Thus, they instantly passed it on to all six of the desire heavens. In the span of an instant, the call reached the Brahma heavens, where its echo was heard by all. After the host of Brahma heard it, then they again addressed everyone, explaining in detail as before. For this reason, this sūtra is named the “Three Turnings of the Dharma Wheel.”
