--- a/01_agama/samyukta3/T101_15.md
+++ b/01_agama/samyukta3/T101_15.md
@@ -14,7 +14,7 @@ next: ../other/T102.html
 1\. Thus I have heard:[\[1\]](#n1){: #ref1} One time, the Buddha was staying at Anāthapiṇḍada Park of Jeta Grove in the country of Śrāvastī.
 {:#p1}
 
-2\. The Buddha then addressed the monks, “There is the monk’s one teaching. The nature of this one teaching is often performing the mindfulness of actions and appearances. It makes the body calm, and the thoughts and supports of the mind are stopped without any remainder. It’s just the practice of mindful wisdom and the teaching and mindfulness practiced together.
+2\. The Buddha then addressed the monks, “There is the monk’s one teaching. The nature of this one teaching is often performing the mindfulness of actions and appearances. It makes the body calm, and the thoughts and supports of the mind are stopped without any remainder. It’s just the practice of mindful wisdom and the teaching of mindfulness practiced together.
 {:#p2}
 
 3\. “What is this one teaching? The nature and practice of this one teaching is the mindfulness of breathing. If a monk is mindful of breathing as he practices, thinks, and often abides in it, then his body will become calm, and his mind’s thoughts and supports will also then stop without anything [remaining]. It’s just the practice of mindful wisdom and the fulfillment of practice. This is a monk’s one teaching. The nature of this one teaching is often performing the mindfulness of actions and appearances. It makes the body become calm, and the thoughts and supports of the mind are stopped without any remaining. It’s just the practice of wisdom and mindfulness, which are increasingly fulfilled. If a monk with this monk’s one teaching can practice, cause, be mindful, and often perform it, he’ll attain enlightenment accordingly.”
